--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ services:
 
 script:
   - ./gradlew clean build -PebeanVersion=$EBEAN_VERSION
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
