--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+sudo: required
 language: java
+services:
+  - docker
 jdk:
   - oraclejdk8
 env:
@@ -11,13 +14,17 @@ env:
   - EBEAN_VERSION="9.1.1"
   - EBEAN_VERSION="9.1.2"
 
-sudo: required
-
-services:
-  - docker
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - gradle/wrapper/
 
 script:
-  - ./gradlew clean build -PebeanVersion=$EBEAN_VERSION
+  - ./gradlew check jacocoTestReport codeCoverageReport -PebeanVersion=$EBEAN_VERSION
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
