--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,31 @@ plugins {
     id 'net.researchgate.release' version '2.4.0'
 }
 
+repositories {
+    mavenCentral()
+}
+
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 group 'com.github.vilmosnagy.elq'
+
+
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
+}
