--- a/elq-core/build.gradle
+++ b/elq-core/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 apply plugin: "info.solidsoft.pitest"
 apply plugin: 'kotlin'
 apply plugin: 'idea'
+apply plugin: "jacoco"
 
 repositories {
     mavenCentral()
@@ -55,4 +56,10 @@ dependencies {
     testCompile "javax.persistence:persistence-api:1.0.2"
     compileOnly "org.avaje.ebean:ebean:$ebean_version"
     testCompile "org.avaje.ebean:ebean:$ebean_version"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
 }
