--- a/test-projects/build.gradle
+++ b/test-projects/build.gradle
@@ -18,6 +18,8 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
+
 subprojects {
 
     group 'com.github.vilmosnagy.elq'
@@ -39,6 +41,7 @@ subprojects {
 
     apply plugin: 'kotlin'
     apply plugin: 'idea'
+    apply plugin: "jacoco"
 
     repositories {
         mavenCentral()
@@ -116,4 +119,9 @@ subprojects {
     processTestResources.dependsOn copyTestResources
     processTestResources.dependsOn copyResources
 
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+    }
 }
