--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ querybean-generator/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+environment.properties
