--- a/test-projects/build.gradle
+++ b/test-projects/build.gradle
@@ -101,6 +101,8 @@ subprojects {
 
         testCompile 'io.kotlintest:kotlintest:1.3.5'
         testCompile "com.nhaarman:mockito-kotlin:0.9.0"
+        testCompile "org.slf4j:slf4j-api:1.7.21"
+        testCompile "org.slf4j:slf4j-simple:1.7.21"
 
         testCompile 'junit:junit:4.12'
 
