--- a/elq-core/build.gradle
+++ b/elq-core/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     testCompile 'io.kotlintest:kotlintest:1.3.5'
     testCompile "com.nhaarman:mockito-kotlin:0.11.0"
+    testCompile 'de.jodamob.kotlin:kotlin-runner-junit4:0.3.1'
 
     compileOnly "javax.persistence:persistence-api:1.0.2"
     testCompile "javax.persistence:persistence-api:1.0.2"
