--- a/test-projects/build.gradle
+++ b/test-projects/build.gradle
@@ -1,5 +1,3 @@
-import groovy.sql.Sql
-
 group 'com.github.vilmosnagy.elq'
 
 buildscript {
@@ -52,21 +50,31 @@ subprojects {
     }
 
     task ebeanEnhanceMain << {
-        ant.taskdef(name: 'ebeanEnhance',
-                classname: 'com.avaje.ebean.enhance.ant.AntEnhanceTask',
-                classpath: "$configurations.enhance.asPath")
-        ant.ebeanEnhance(classSource: "$project.buildDir.absolutePath/classes/main",
-                packages: 'com.github.vilmosnagy.elq.testproject.**',
-                transformArgs: "debug=5")
+        try {
+            ant.taskdef(name: 'ebeanEnhance',
+                    classname: 'com.avaje.ebean.enhance.ant.AntEnhanceTask',
+                    classpath: "$configurations.enhance.asPath")
+            ant.ebeanEnhance(classSource: "$project.buildDir.absolutePath/classes/main",
+                    packages: 'com.github.vilmosnagy.elq.testproject.**',
+                    transformArgs: "debug=5")
+        } catch (Exception e) {
+            println("Cannot enhance main classes. Run with --debug to see the stacktrace.")
+            logger.debug("Ebean enhancer exception: ", e)
+        }
     }
 
     task ebeanEnhanceTest << {
-        ant.taskdef(name: 'ebeanEnhance',
-                classname: 'com.avaje.ebean.enhance.ant.AntEnhanceTask',
-                classpath: "$configurations.enhance.asPath")
-        ant.ebeanEnhance(classSource: "$project.buildDir.absolutePath/classes/test",
-                packages: 'com.github.vilmosnagy.elq.testproject.**',
-                transformArgs: "debug=5")
+        try {
+            ant.taskdef(name: 'ebeanEnhance',
+                    classname: 'com.avaje.ebean.enhance.ant.AntEnhanceTask',
+                    classpath: "$configurations.enhance.asPath")
+            ant.ebeanEnhance(classSource: "$project.buildDir.absolutePath/classes/test",
+                    packages: 'com.github.vilmosnagy.elq.testproject.**',
+                    transformArgs: "debug=5")
+        } catch (Exception e) {
+            println("Cannot enhance main classes. Run with --debug to see the stacktrace.")
+            logger.debug("Ebean enhancer exception: ", e)
+        }
     }
 
     classes.dependsOn ebeanEnhanceMain
